[FIX] <pro>Form: Fix label align problem in grid layout.

--- a/components-pro/field/style/index.less
+++ b/components-pro/field/style/index.less
@@ -31,21 +31,22 @@
       text-align: center;
     }
 
-    label {
-      display: flex;
-      align-items: baseline;
-      padding: @label-wrapper-padding;
-      padding-right: 0;
-      padding-left: 0;
-      color: @label-color-horizontal;
-
-      > span {
-        flex: 1;
-      }
-    }
-
     &-left label > span {
       flex: unset;
+    }
+  }
+
+  label&-label,
+  &-label label {
+    display: flex;
+    align-items: baseline;
+    padding: @label-wrapper-padding;
+    padding-right: 0;
+    padding-left: 0;
+    color: @label-color-horizontal;
+
+    > span {
+      flex: 1;
     }
   }
 
